--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,3 +2,9 @@ $mainColor: #2888e5;
 body {
     background-color: $mainColor;
 }
+.map-builder {
+    height: 100%;
+}
+.dashboard {
+    height: 100%;
+}
