--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -1,13 +1,16 @@
 <md-content class="dashboard">
-    <section layout="row" flex>
-        <md-toolbar class="md-warn">
-            <md-button class="md-icon-button" ng-click="toggle('left')">1</md-button>
-        </md-toolbar>
-
+    <section layout="row" flex style="height:100%">
         <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
             <md-toolbar class="md-theme-indigo">
             </md-toolbar>
             <md-content></md-content>
         </md-sidenav>
+        <div layout="column" flex>
+            <md-toolbar class="md-warn">
+                <md-button class="md-icon-button toolbar-button" ng-click="toggle('left')" hide-gt-md>
+                    <i class="ion-navicon"></i>
+                </md-button>
+            </md-toolbar>
+        </div>
     </section>
 </md-content>
