--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,4 +10,18 @@ body {
 }
 .toolbar-button {
     font-size: 1.6em !important;
+    color: #000000 !important;
+}
+.icon::before {
+    line-height: 0 !important;
+}
+.mb-header {
+    background-color: #f6f6f6 !important;
+}
+.md-whiteframe-glow-z1 {
+    box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 0px 2px 2px rgba(0, 0, 0, 0.098), 0px 0px 5px 1px rgba(0, 0, 0, 0.084);
+    color: #000000;
+}
+.mb-side-header-label {
+    text-align: center;
 }
