--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -5,7 +5,16 @@
                 <md-icon md-svg-icon="{{headerIcon}}" style="height:120px;width:120px;margin-top:30px;display:block;" aria-label="Map"></md-icon>
                 <h1 class="mb-side-header-label">Map Builder</h1>
             </md-toolbar>
-            <md-content></md-content>
+            <md-content class="menu-list">
+                <ul>
+                    <li>
+                        <span>Home</span>
+                    </li>
+                    <li>
+                        <span>Emoji</span>
+                    </li>
+                </ul>
+            </md-content>
         </md-sidenav>
         <div layout="column" flex>
             <md-toolbar class="mb-header md-whiteframe-glow-z1">
@@ -13,35 +22,7 @@
                     <i class="icon ion-navicon" aria-label="Navicon"></i>
                 </md-button>
             </md-toolbar>
-            <md-content>
-                <md-card>
-                    <!-- <section layout="padding" flex style="padding:50px;">
-                        <span ng-repeat="emoji in emojis" ng-click="changeHeaderIcon(emoji.emoji)" class="emoji-repeat-area">
-                            <md-tooltip md-direction="top">
-                                {{emoji.name}}
-                            </md-tooltip>
-                            <md-icon md-svg-icon="{{emoji.emoji}}" class="emoji-repeat"></md-icon>
-                        </span>
-                    </section> -->
-                    <md-grid-list
-                        md-cols="1" md-cols-sm="2" md-cols-md="3" md-cols-gt-md="6"
-                        md-row-height-gt-md="1:1" md-row-height="4:3"
-                        md-gutter="8px" md-gutter-gt-sm="4px"
-                        style="text-align:center;">
-                        <md-grid-title ng-repeat="emoji in emojis"
-                            md-rowspan="2"
-                            md-colspan="2"
-                            md-colspan-sm="1"
-                            class="emoji-repeat-area"
-                            ng-click="changeHeaderIcon(emoji.emoji)">
-                            <md-tooltip md-direction="top">
-                                {{emoji.name}}
-                            </md-tooltip>
-                            <md-icon md-svg-icon="{{emoji.emoji}}" class="emoji-repeat"></md-icon>
-                        </md-grid-title>
-                    </md-grid-list>
-                </md-card>
-            </md-content>
+            <div ui-view="content"></div>
         </div>
         <div class="fixed-action-btn click-to-toggle" style="botom:45px;right:24px;">
             <a class="btn-floating btn-large red">
