--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -1,16 +1,16 @@
 <md-content class="dashboard">
     <section layout="row" flex style="height:100%">
-        <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
+        <md-sidenav class="md-sidenav-left md-whiteframe-z2 mb-side-nav" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
             <md-toolbar class="md-whiteframe-glow-z1 waves-effect waves-light waves-ripple">
                 <md-icon md-svg-icon="{{headerIcon}}" style="height:120px;width:120px;margin-top:30px;display:block;" aria-label="Map"></md-icon>
                 <h1 class="mb-side-header-label">Map Builder</h1>
             </md-toolbar>
             <md-content class="menu-list">
                 <ul>
-                    <li>
+                    <li class="waves-effect waves-light waves-block" ui-sref=".home">
                         <span>Home</span>
                     </li>
-                    <li>
+                    <li class="waves-effect waves-light waves-block" ui-sref=".emoji">
                         <span>Emoji</span>
                     </li>
                 </ul>
@@ -22,7 +22,9 @@
                     <i class="icon ion-navicon" aria-label="Navicon"></i>
                 </md-button>
             </md-toolbar>
-            <div ui-view="content"></div>
+            <md-content md-scroll-y layout="column" flex>
+                <div ui-view="content"></div>
+            </md-content>
         </div>
         <div class="fixed-action-btn click-to-toggle" style="botom:45px;right:24px;">
             <a class="btn-floating btn-large red">
