--- a/sass/main.scss
+++ b/sass/main.scss
@@ -48,6 +48,8 @@ body {
 }
 .mb-side-nav {
     background-color: #106CC8;
+    min-width: 272px;
+    width: 272px;
 }
 .menu-list {
     background-color: #106CC8;
