--- a/template/map.html
+++ b/template/map.html
@@ -5,6 +5,8 @@
         </md-card-title-text>
     </md-card-title>
     <md-card-content layout="row" layout-align="space-between">
-        <mb style="width:100%"></mb>
+        <mb style="width:100%"
+            mb-init-width="320"
+            mb-init-height="640"></mb>
     </md-card-content>
 </md-card>
